--- a/.gitignore
+++ b/.gitignore
@@ -540,3 +540,6 @@ dmypy.json
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,jupyternotebooks,visualstudiocode,latex
+
+### Jupyter Book ###
+_build/html/
