--- a/templates/mkdocs.yml
+++ b/templates/mkdocs.yml
@@ -23,6 +23,10 @@ theme:
   font:
     text: 'Roboto'
     code: 'Roboto Mono'
+  features:
+    - instant
+  icon:
+    logo: material/school
 
 # Markdown Extensions
 markdown_extensions:
@@ -40,14 +44,14 @@ extra_css:
   - 'stylesheets/extra.css'
 
 # Theme Customization
-#extra:
-#  social:
-#    - type: 'globe'
-#      link: 'https://pcc.edu'
-#    - type: 'github'
-#      link: 'https://github.com/professorkazarinoff'
-#    - type: 'twitter'
-#      link: 'https://twitter.com/pkazarinoff'
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/ProfessorKazarinoff
+      name: ProfessorKazarinoff on GitHub
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/pkazarinoff
+      name: pkazarinoff on Twitter
 
 # Copyright
 copyright: 'Text Licensed Under Creative Commons Attribution-ShareAlike 4.0'
