update requirements-website.txt with sympy and numpy, ch 10 build has display problems

--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -81,4 +81,4 @@ nav:
     - Solving Equations: 10-Symbolic-Math/10-06-Solving-Equations.ipynb
     - Solving Two Equations for Two Unknows: 10-Symbolic-Math/10-07-Solving-Two-Equations-for-Two-Unknowns.ipynb
     - Summary: 10-Symbolic-Math/10-08-Summary.ipynb
-    - Review Questions: 10-Symbolic-Math/10-09-Review-Questions
+    - Review Questions: 10-Symbolic-Math/10-09-Review-Questions.ipynb
