--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -66,19 +66,26 @@ nav:
     - Formatting Conventions: 00-Preface/00-04-Formatting-Conventions.ipynb
     - Errata: 00-Preface/00-05-Errata.ipynb
   - Chapter 1 Orientation:
-    - Introduction: 01-Orientation/01-00-Orientation.ipynb
-    - Why Python?: 01-Orientation/01-01-Why-Python.ipynb
-    - The Anaconda Distribution of Python: 01-Orientation/01-02-The-Anaconda-Distribution-of-Python.ipynb
-    - Installing Anaconda on Windows: 01-Orientation/01-03-Installing-Anaconda-on-Windows.ipynb
-
+    - 1.1 Introduction: 01-Orientation/01-00-Orientation.ipynb
+    - 1.2 Why Python?: 01-Orientation/01-01-Why-Python.ipynb
+    - 1.3 The Anaconda Distribution of Python: 01-Orientation/01-02-The-Anaconda-Distribution-of-Python.ipynb
+    - 1.4 Installing Anaconda on Windows: 01-Orientation/01-03-Installing-Anaconda-on-Windows.ipynb
+  - Chapter 3 The Python REPL:
+    - 3.1 Introduction: 03-The-Python-REPL/03-01-Introduction.ipynb
+    - 3.2 Python as a Calculator: 03-The-Python-REPL/03-02-Python-as-a-Calculator.ipynb
+    - 3.3 The Python REPL: 03-The-Python-REPL/03-03-Variables.ipynb
+    - 3.4 String Operations: 03-The-Python-REPL/03-04-String-Operations.ipynb
+    - 3.5 Print Statements: 03-The-Python-REPL/03-05-Print-Statements.ipynb
+    - 3.6 Summary: 03-The-Python-REPL/03-06-Summary.ipynb
+    - 3.7 Review Questions: 03-The-Python-REPL/03-07-Review-Questions.ipynb
   - Chapter 10 Symbolic Math:
-    - Introduction: 10-Symbolic-Math/10-00-Introduction.ipynb
-    - SymPy: 10-Symbolic-Math/10-01-SymPy.ipynb
-    - Installing SymPy: 10-Symbolic-Math/10-02-Installing-SymPy.ipynb
-    - Defining Variables: 10-Symbolic-Math/10-03-Defining-Variables.ipynb
-    - Expressions and Substitutions: 10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
-    - Equations: 10-Symbolic-Math/10-05-Equations.ipynb
-    - Solving Equations: 10-Symbolic-Math/10-06-Solving-Equations.ipynb
-    - Solving Two Equations for Two Unknows: 10-Symbolic-Math/10-07-Solving-Two-Equations-for-Two-Unknowns.ipynb
-    - Summary: 10-Symbolic-Math/10-08-Summary.ipynb
-    - Review Questions: 10-Symbolic-Math/10-09-Review-Questions.ipynb
+    - 10.1 Introduction: 10-Symbolic-Math/10-00-Introduction.ipynb
+    - 10.2 SymPy: 10-Symbolic-Math/10-01-SymPy.ipynb
+    - 10.3 Installing SymPy: 10-Symbolic-Math/10-02-Installing-SymPy.ipynb
+    - 10.4 Defining Variables: 10-Symbolic-Math/10-03-Defining-Variables.ipynb
+    - 10.5 Expressions and Substitutions: 10-Symbolic-Math/10-04-Expressions-and-Substitutions.ipynb
+    - 10.6 Equations: 10-Symbolic-Math/10-05-Equations.ipynb
+    - 10.7 Solving Equations: 10-Symbolic-Math/10-06-Solving-Equations.ipynb
+    - 10.8 Solving Two Equations for Two Unknows: 10-Symbolic-Math/10-07-Solving-Two-Equations-for-Two-Unknowns.ipynb
+    - 10.9 Summary: 10-Symbolic-Math/10-08-Summary.ipynb
+    - 10.10 Review Questions: 10-Symbolic-Math/10-09-Review-Questions.ipynb
