--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -80,7 +80,9 @@ nav:
     - 3.7 Review Questions: 03-The-Python-REPL/03-07-Review-Questions.ipynb
   - Chapter 4 Data Types and Variables:
     - 4.1 Introduction: 04-Data-Types-and-Variables/04-01-Introduction.ipynb
-    
+    - 4.2 Data Types and Variables: 04-Data-Types-and-Variables/04-02-Numeric-Data-Types.ipynb
+    - 4.3 Boolean Data Type: 04-Data-Types-and-Variables/04-03-Boolean-Data-Type.ipynb
+    - 4.4 Strings: 04-Data-Types-and-Variables/04-04-Strings.ipynb
   - Chapter 10 Symbolic Math:
     - 10.1 Introduction: 10-Symbolic-Math/10-00-Introduction.ipynb
     - 10.2 SymPy: 10-Symbolic-Math/10-01-SymPy.ipynb
