--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -84,6 +84,9 @@ nav:
     - 4.3 Boolean Data Type: 04-Data-Types-and-Variables/04-03-Boolean-Data-Type.ipynb
     - 4.4 Strings: 04-Data-Types-and-Variables/04-04-Strings.ipynb
     - 4.5 Lists: 04-Data-Types-and-Variables/04-05-Lists.ipynb
+    - 4.6 Dictionaries and Tuples: 04-Data-Types-and-Variables/04-06-Dictionaries-and-Tuples.ipynb
+    - 4.7 Summary: 04-Data-Types-and-Variables/04-07-Summary.ipynb
+    - 4.8 Review Questions: 04-Data-Types-and-Variables/04-08-Review-Questions.ipynb
   - Chapter 10 Symbolic Math:
     - 10.1 Introduction: 10-Symbolic-Math/10-00-Introduction.ipynb
     - 10.2 SymPy: 10-Symbolic-Math/10-01-SymPy.ipynb
