--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -33,11 +33,14 @@ markdown_extensions:
   - admonition
   - footnotes
   - codehilite
-  - pymdownx.arithmatex
+  - pymdownx.arithmatex:
+      generic: true
 
 # Javascript for MathJax
 extra_javascript:
-  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
+  - javascripts/config.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 # Extra css
 extra_css:
