--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -33,6 +33,7 @@ markdown_extensions:
   - admonition
   - footnotes
   - codehilite
+  - pymdownx.superfences
   - pymdownx.arithmatex:
       generic: true
 
