add extra.css with just comments, included extra.css in mkdocs.yml, copy extra.css in tasks.py

--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -39,13 +39,14 @@ markdown_extensions:
 
 # Javascript for MathJax
 extra_javascript:
-  - javascripts/config.js
+  - js/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 # Extra css
 extra_css:
-  - 'stylesheets/extra.css'
+  - css/extra.css
+  - css/_alert.scss
 
 # Theme Customization
 extra:
