--- a/templates/mkdocs/mkdocs.yml
+++ b/templates/mkdocs/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
     - 5.5 Array Creation: 05-NumPy-and-Arrays/05-05-Array-Creation.ipynb
     - 5.6 Array Indexing: 05-NumPy-and-Arrays/05-06-Array-Indexing.ipynb
     - 5.7 Array Slicing: 05-NumPy-and-Arrays/05-07-Array-Slicing.ipynb
+    - 5.8 Array Operations: 05-NumPy-and-Arrays/05-08-Array-Operations.ipynb
   - Chapter 10 Symbolic Math:
     - 10.1 Introduction: 10-Symbolic-Math/10-00-Introduction.ipynb
     - 10.2 SymPy: 10-Symbolic-Math/10-01-SymPy.ipynb
